SyntaxAnalysis/src/main/bkool/parser/.antlr/BKOOLParser.py
# Generated from /Users/tu/Desktop/PPL/SyntaxAnalysis/src/main/bkool/parser/BKOOL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "','", "'{'", "'}'", "'='", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "MTYPE", "ID", "DECIMAL", 
                      "INTLIT", "OP", "LB", "RB", "CM", "LP", "RP", "EQ", 
                      "SEMI", "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_varlist = 4
    RULE_subvarlist = 5
    RULE_funcdecl = 6
    RULE_fparam = 7
    RULE_declarparamlist = 8
    RULE_fbody = 9
    RULE_bodyitem = 10
    RULE_callfunc = 11
    RULE_fargument = 12
    RULE_fargumentlist = 13
    RULE_assignvar = 14
    RULE_freturn = 15
    RULE_expr = 16
    RULE_exprlist = 17
    RULE_var = 18

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "varlist", 
                   "subvarlist", "funcdecl", "fparam", "declarparamlist", 
                   "fbody", "bodyitem", "callfunc", "fargument", "fargumentlist", 
                   "assignvar", "freturn", "expr", "exprlist", "var" ]

    EOF = Token.EOF
    T__0=1
    MTYPE=2
    ID=3
    DECIMAL=4
    INTLIT=5
    OP=6
    LB=7
    RB=8
    CM=9
    LP=10
    RP=11
    EQ=12
    SEMI=13
    WS=14
    ERROR_CHAR=15
    UNCLOSE_STRING=16
    ILLEGAL_ESCAPE=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(BKOOLParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(BKOOLParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.decl()
            self.state = 39
            self.decllist()
            self.state = 40
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(BKOOLParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(BKOOLParser.DecllistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decllist




    def decllist(self):

        localctx = BKOOLParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.MTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.decl()
                self.state = 43
                self.decllist()
                pass
            elif token in [BKOOLParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def funcdecl(self):
            return self.getTypedRuleContext(BKOOLParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decl




    def decl(self):

        localctx = BKOOLParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.vardecl()
                self.state = 49
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MTYPE(self):
            return self.getToken(BKOOLParser.MTYPE, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKOOLParser.VarlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_vardecl




    def vardecl(self):

        localctx = BKOOLParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(BKOOLParser.MTYPE)
            self.state = 55
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def subvarlist(self):
            return self.getTypedRuleContext(BKOOLParser.SubvarlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_varlist




    def varlist(self):

        localctx = BKOOLParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(BKOOLParser.ID)
            self.state = 58
            self.subvarlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubvarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(BKOOLParser.CM, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def subvarlist(self):
            return self.getTypedRuleContext(BKOOLParser.SubvarlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_subvarlist




    def subvarlist(self):

        localctx = BKOOLParser.SubvarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subvarlist)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(BKOOLParser.CM)
                self.state = 61
                self.match(BKOOLParser.ID)
                self.state = 62
                self.subvarlist()
                pass
            elif token in [BKOOLParser.RB, BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MTYPE(self):
            return self.getToken(BKOOLParser.MTYPE, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def fparam(self):
            return self.getTypedRuleContext(BKOOLParser.FparamContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def fbody(self):
            return self.getTypedRuleContext(BKOOLParser.FbodyContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_funcdecl




    def funcdecl(self):

        localctx = BKOOLParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(BKOOLParser.MTYPE)
            self.state = 67
            self.match(BKOOLParser.ID)
            self.state = 68
            self.match(BKOOLParser.LB)
            self.state = 69
            self.fparam()
            self.state = 70
            self.match(BKOOLParser.RB)
            self.state = 71
            self.match(BKOOLParser.LP)
            self.state = 72
            self.fbody()
            self.state = 73
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FparamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MTYPE(self):
            return self.getToken(BKOOLParser.MTYPE, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKOOLParser.VarlistContext,0)


        def declarparamlist(self):
            return self.getTypedRuleContext(BKOOLParser.DeclarparamlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_fparam




    def fparam(self):

        localctx = BKOOLParser.FparamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fparam)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.MTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(BKOOLParser.MTYPE)
                self.state = 76
                self.varlist()
                self.state = 77
                self.declarparamlist()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarparamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def MTYPE(self):
            return self.getToken(BKOOLParser.MTYPE, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKOOLParser.VarlistContext,0)


        def declarparamlist(self):
            return self.getTypedRuleContext(BKOOLParser.DeclarparamlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_declarparamlist




    def declarparamlist(self):

        localctx = BKOOLParser.DeclarparamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declarparamlist)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(BKOOLParser.SEMI)
                self.state = 83
                self.match(BKOOLParser.MTYPE)
                self.state = 84
                self.varlist()
                self.state = 85
                self.declarparamlist()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FbodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bodyitem(self):
            return self.getTypedRuleContext(BKOOLParser.BodyitemContext,0)


        def fbody(self):
            return self.getTypedRuleContext(BKOOLParser.FbodyContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_fbody




    def fbody(self):

        localctx = BKOOLParser.FbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fbody)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.T__0, BKOOLParser.MTYPE, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.bodyitem()
                self.state = 91
                self.fbody()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyitemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def assignvar(self):
            return self.getTypedRuleContext(BKOOLParser.AssignvarContext,0)


        def callfunc(self):
            return self.getTypedRuleContext(BKOOLParser.CallfuncContext,0)


        def freturn(self):
            return self.getTypedRuleContext(BKOOLParser.FreturnContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_bodyitem




    def bodyitem(self):

        localctx = BKOOLParser.BodyitemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bodyitem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 96
                self.vardecl()
                pass

            elif la_ == 2:
                self.state = 97
                self.assignvar()
                pass

            elif la_ == 3:
                self.state = 98
                self.callfunc()
                pass

            elif la_ == 4:
                self.state = 99
                self.freturn()
                pass


            self.state = 102
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallfuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def fargument(self):
            return self.getTypedRuleContext(BKOOLParser.FargumentContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_callfunc




    def callfunc(self):

        localctx = BKOOLParser.CallfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_callfunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(BKOOLParser.ID)
            self.state = 105
            self.match(BKOOLParser.LB)
            self.state = 106
            self.fargument()
            self.state = 107
            self.match(BKOOLParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FargumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def fargumentlist(self):
            return self.getTypedRuleContext(BKOOLParser.FargumentlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_fargument




    def fargument(self):

        localctx = BKOOLParser.FargumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_fargument)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.ID, BKOOLParser.DECIMAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.expr()
                self.state = 110
                self.fargumentlist()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FargumentlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(BKOOLParser.CM, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def fargumentlist(self):
            return self.getTypedRuleContext(BKOOLParser.FargumentlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_fargumentlist




    def fargumentlist(self):

        localctx = BKOOLParser.FargumentlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_fargumentlist)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(BKOOLParser.CM)
                self.state = 116
                self.expr()
                self.state = 117
                self.fargumentlist()
                pass
            elif token in [BKOOLParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def EQ(self):
            return self.getToken(BKOOLParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_assignvar




    def assignvar(self):

        localctx = BKOOLParser.AssignvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_assignvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(BKOOLParser.ID)
            self.state = 123
            self.match(BKOOLParser.EQ)
            self.state = 124
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FreturnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_freturn




    def freturn(self):

        localctx = BKOOLParser.FreturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_freturn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BKOOLParser.T__0)
            self.state = 127
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKOOLParser.VarContext,0)


        def exprlist(self):
            return self.getTypedRuleContext(BKOOLParser.ExprlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_expr




    def expr(self):

        localctx = BKOOLParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.var()
            self.state = 130
            self.exprlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(BKOOLParser.OP, 0)

        def var(self):
            return self.getTypedRuleContext(BKOOLParser.VarContext,0)


        def exprlist(self):
            return self.getTypedRuleContext(BKOOLParser.ExprlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_exprlist




    def exprlist(self):

        localctx = BKOOLParser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_exprlist)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.OP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(BKOOLParser.OP)
                self.state = 133
                self.var()
                self.state = 134
                self.exprlist()
                pass
            elif token in [BKOOLParser.RB, BKOOLParser.CM, BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def DECIMAL(self):
            return self.getToken(BKOOLParser.DECIMAL, 0)

        def callfunc(self):
            return self.getTypedRuleContext(BKOOLParser.CallfuncContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_var




    def var(self):

        localctx = BKOOLParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_var)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(BKOOLParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(BKOOLParser.DECIMAL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.callfunc()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





